--- a/static/linfiniti.css
+++ b/static/linfiniti.css
@@ -77,3 +77,51 @@ ul > .current > a:hover {
   font-weight: heavy;
   font-size: larger;
 }
+
+/* Added by capooti from here down. Classes for displaying UI elements */
+span.cmd-txt {
+    font-family: Courier;
+}
+span.button-name {
+    border: 1px solid #000000;
+    border-radius: 5px;
+    padding: 1px 5px 1px 5px;
+    background: -moz-linear-gradient(100% 100% 90deg, white, DarkGray);
+    background: -webkit-gradient(linear, right top, right bottom, from(DarkGray), to(white));
+}
+span.tool-name {
+    border: 1px solid #000000;
+    padding: 1px 5px 1px 5px;
+    background-color: LemonChiffon;
+}
+span.dialog-name {
+    border: 1px solid #000000;
+    padding: 1px 5px 1px 5px;
+    background-color: DarkGray;
+    font-weight: bold;
+}
+span.tab-name {
+    border: 1px solid #000000;
+    padding: 1px 5px 1px 5px;
+    background: -moz-linear-gradient(100% 100% 90deg, white, DarkGray);
+    background: -webkit-gradient(linear, right top, right bottom, from(DarkGray), to(white));
+}
+span.radio-name {
+    background-image: url(img/radiobutton.png);
+    background-position: left center;
+    background-repeat: no-repeat;
+    background-color: LightGray;
+    border: 0px solid #000000;
+    padding: 1px 5px 1px 5px;
+    padding-left: 25px;
+}
+span.check-name {
+    background-image: url(img/checkbox.png);
+    background-position: left center;
+    background-repeat: no-repeat;
+    background-color: LightGray;
+    border: 0px solid #000000;
+    padding: 1px 5px 1px 5px;
+    padding-left: 25px;
+}
+
